# Evo-anything

./: .gitignore  .mcp.json  README.md  README_CN.md  README_EN.md  README_ZN.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
AircraftLanding_fig/: README.txt  plot_lineage_performance.py  state.json
_sellable_product/saas-starter/: .env.example  README.md  package.json  tailwind.config.ts
example/AircraftLanding/: README_CN.md
example/tsp-optimization/: README.md  README_CN.md  tsp.py
examples/AircraftLanding/: README.md
plugin/: AGENTS.md  TOOLS.md  index.js  index.ts  openclaw.plugin.json  package.json  server.ts
plugin/agents/: orchestrator.md  policy_agent.md  research_agent.md  worker.md
plugin/evo-engine/: models.py  pyproject.toml  selection.py  server.py
plugin/skills/ask-lit/: SKILL.md
plugin/src/: bench_executor.ts  bibtex.test.ts  bibtex.ts  models.test.ts  models.ts  paper_assembler.ts  paper_writer.ts  research_state.test.ts  research_state.ts  selection.test.ts  selection.ts  state.test.ts  state.ts  vectordb.test.ts  viz_engine.ts
research/: 03_evo_anything_analysis.md  04_ecosystem_capability_map.md  05_a_layer_knowledge_qa.md  05_multi_objective_coevolution_experiment.md  README.md
scripts/: cli.js  postinstall.js
test-gd/: integration_test_large.py  integration_test_multi_target.py  ml_pipeline.py  optimizer_large.py
tsp-optimization/: tsp.py
tsp-optimization_fig/fig/: README_lineage_plots.md  plot_lineage_2d_png.py  plot_lineage_3d_png.py
(+43 files in other folders)
